--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@
     font-size: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-
+body{
+    color: lightblue;
+}
 .form-container{
     position: absolute;
     top: 17%;
